# DuDe_Hawaiian

./: .env.example  .gitignore  NOTICE  README.md  docker-compose.override.yml  docker-compose.yml  dude-stack.yml  dude_control.py  dude_install_report.md  requirements.txt  script.txt  sitemap.xml  start.sh
.githooks/: pre-push
.github/workflows/: ci.yml  rowboat-build.yml
apps/: thai_personal_assistant.json
apps/agents/: .env.example  .gitignore  Dockerfile  NOTICE.md  README.md  pyproject.toml  requirements.txt
apps/agents/src/app/: main.py
apps/agents/src/graph/: core.py  guardrails.py  instructions.py  swarm_wrapper.py  tools.py  types.py
apps/agents/src/graph/helpers/: access.py  instructions.py  state.py  transfer.py
apps/agents/src/swarm/: core.py  types.py  util.py
apps/agents/src/utils/: common.py
apps/agents/tests/: app_client.py  interactive.py
apps/agents/tests/sample_requests/: default_example.json  example3.json
apps/chat_widget/: package-lock.json  package.json
apps/chat_widget/app/: app.tsx
apps/copilot/: Dockerfile  README.md  app.py  client.py  copilot.py  copilot_edit_agent.md  copilot_multi_agent.md  current_workflow.md  example_multi_agent_1.md  lib.py  requirements.txt  streaming.py
apps/docs/: Dockerfile  mkdocs.yml  readme.md
apps/docs/docs/: about.md  add_tools.md  agents.md  building_in_studio.md  create_agents.md  graph.md  hosted_setup.md  index.md  installation.md  license.md  oss_installation.md  playground.md  prompts.md  quickstart.md  setup.md  simulate.md  studio_overview.md  testing.md  tools.md  update_agents.md  using_rag.md  using_the_api.md  using_the_sdk.md
apps/experimental/twilio_handler/: app.py  load_env.py  util.py
apps/python-sdk/: README.md  lib.py  pyproject.toml  stateful_sdk.py
apps/python-sdk/src/rowboat/: __init__.py  client.py  schema.py
apps/rowboat/: middleware.ts  package-lock.json  package.json  tailwind.config.ts
apps/rowboat/app/: actions.ts  app.tsx  globals.css  layout.tsx  loading.tsx  page.tsx  providers.tsx
apps/rowboat/app/actions/: actions.ts  auth.actions.ts  auth_actions.ts  billing.actions.ts  billing_actions.ts  composio.actions.ts  composio_actions.ts  conversation.actions.ts  conversation_actions.ts  copilot.actions.ts  (+21 more)
apps/rowboat/di/: container.ts
apps/rowboat/hooks/: use-click-away.ts
apps/rowboat/types/: project_types.ts  workflow_types.ts
apps/rowboat_agents/: .dockerignore  Dockerfile  README.md  pyproject.toml  requirements.txt
apps/rowboat_agents/configs/: default_config.json
apps/rowboat_agents/src/app/: main.py
apps/rowboat_agents/src/graph/: core.py  execute_turn.py  guardrails.py  instructions.py  swarm_wrapper.py  tool_calling.py  tools.py  tracing.py  types.py
apps/rowboat_agents/src/graph/helpers/: control.py  instructions.py  library_tools.py  state.py
apps/rowboat_agents/src/utils/: client.py  common.py
apps/rowboat_agents/tests/: app_client_streaming.py  interactive.py
apps/rowboat_agents/tests/sample_requests/: example1.json  example2.json  tmp1.json  tmp2.json  tmp3.json  tmp4.json
apps/rowboat_agents/tests/sample_responses/: default_example.json
apps/simulation_runner/: db.py  requirements.txt  scenario_types.py  service.py  simulation.py
apps/tools_webhook/: app.py
apps/twilio_handler/: .env.example  Dockerfile  app.py  requirements.txt  twilio_api.py
apps/voice/: Dockerfile
rowboat-config/scripts/: ai-stack-start-all.sh
services/doc_dude/: Dockerfile  Dockerfile.ocr_igpu  main.py  requirements.txt
services/front_dude/: main.py  requirements.txt
services/medic_dude/: main.py
services/messenger_dude/: Dockerfile  main.py  requirements.txt
services/rowboat-src/: docker-compose.override.yml
services/vision_dude/: main.py
services/webui/: Dockerfile  package-lock.json
webui/: .env.production  Dockerfile  README_webui.md  index.html  package-lock.json  package.json
webui/nginx/: nginx.conf
webui/src/: App.jsx  main.jsx
webui/src/pages/: LiffUpload.jsx
(+378 files in other folders)
